# solana-nft-fraction

./: Anchor.toml  README.md  package.json
programs/solana-nft-fraction/: Cargo.toml
programs/solana-nft-fraction/src/: lib.rs
programs/solana-nft-fraction/src/instructions/: fractionalize_nft.rs  init_fractionalize.rs  lock_and_fractionalize.rs  mint_fraction.rs  mod.rs  unfractionalize_nft.rs
programs/solana-nft-fraction/src/state/: fraction_details.rs  mod.rs
tests/: solana-nft-fraction.ts
